修复setup重复执行会导致循环链接的问题

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -10,8 +10,9 @@ font_size 14.5
 
 
 # 背景模糊
-background_opacity 0.90
-dynamic_background_opacity yes
+background_opacity 1.0
+# background_opacity 0.90
+dynamic_background_opacity false
 background_blur 60
 
 
@@ -21,7 +22,7 @@ clipboard_control write-clipboard write-primary read-clipboard read-primary
 # 无边框
 hide_window_decorations titlebar-only
 
-window_padding_width 8 12
+window_padding_width 4 8
 
 remember_window_size  no
 initial_window_width  85c
