--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,7 +3,7 @@ include ./theme.conf
 # bold_font auto
 # italic_font auto
 # bold_italic_font auto
-font_size 14.5
+font_size 14.0
 
 # modify_font cell_height +0px
 # modify_font baseline 2
@@ -19,10 +19,13 @@ background_blur 60
 allow_hyperlinks yes
 clipboard_control write-clipboard write-primary read-clipboard read-primary
 
-# 无边框
-hide_window_decorations titlebar-only
+# titlebar
+macos_titlebar_color background
+macos_show_window_title_in menubar
+# hide_window_decorations titlebar-only
 
-window_padding_width 4 8
+
+window_padding_width 0 8
 
 remember_window_size  no
 initial_window_width  85c
