--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,4 +1,3 @@
-include ./theme.conf
 # font_family "JetBrainsMono Nerd Font"
 # bold_font auto
 # italic_font auto
@@ -10,8 +9,9 @@ font_size 14.0
 
 
 # 背景模糊
-background_opacity 1.0
+# 在Macos下开启会导致窗口阴影不渲染，不太和谐，所以不用
 # background_opacity 0.90
+background_opacity 1.0
 dynamic_background_opacity false
 background_blur 60
 
@@ -25,7 +25,7 @@ macos_show_window_title_in menubar
 # hide_window_decorations titlebar-only
 
 
-window_padding_width 0 8
+window_padding_width 0 10
 
 remember_window_size  no
 initial_window_width  85c
@@ -52,3 +52,9 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 # END_KITTY_FONTS
+
+
+# BEGIN_KITTY_THEME
+# Base2Tone Mall Dark
+include current-theme.conf
+# END_KITTY_THEME
