--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -1,90 +1,62 @@
 # vim:ft=kitty
 
-## name: Base2Tone Mall Dark
-## author: Bram de Haan (https://github.com/atelierbram)
-## license: MIT
-## upstream: https://github.com/atelierbram/Base2Tone-kitty/blob/main/themes/base2tone-mall-dark.conf
-## blurb: duotone theme | blue violet - light sky blue
+## name:     OneDark-Pro
+## author:   VictorPL (https://github.com/VictorPLopes)
+## license:  MIT
+## upstream: https://github.com/VictorPLopes/OneDark-Pro-Kitty-Terminal/blob/main/kitty-themes/OneDark-Pro.conf
+## blurb:    Kitty theme inspired by Binaryify's One Dark Pro theme for Visual Studio Code.
 
+# Colors
 
-#: The basic colors
+# The basic colors
+foreground              #ABB2BF
+background              #282C34
+selection_foreground    #282C34
+selection_background    #ABB2BF
 
-foreground #97959d
-background #1e1e1f
-selection_foreground #97959d
-selection_background #2b2b2c
+# Cursor colors
+cursor                  #ABB2BF
+cursor_text_color       #282C34
 
+# URL underline color when hovering with mouse
+url_color               #ABB2BF
 
-#: Cursor colors
+# Tab bar colors
+active_tab_foreground   #3F4451
+active_tab_background   #D7DAE0
+inactive_tab_foreground #ABB2BF
+inactive_tab_background #282C34
 
-cursor #3692e2
-cursor_text_color #1e1e1f
+# The 16 terminal colors
 
+# black
+color0 #3F4451
+color8 #4F5666
 
-#: URL underline color when hovering with mouse
+# red
+color1 #E06C75
+color9 #BE5046
 
-url_color #e5dbff
+# green
+color2  #98C379
+color10 #A5E075
 
+# yellow
+color3  #D19A66
+color11 #E5C07B
 
-#: kitty window border colors and terminal bell colors
+# blue
+color4  #61AFEF
+color12 #4DC4FF
 
-active_border_color #515053
-inactive_border_color #1e1e1f
-bell_border_color #855ee8
-visual_bell_color none
+# purple
+color5  #C678DD
+color13 #DE73FF
 
+# cyan
+color6  #56B6C2
+color14 #4CD1E0
 
-
-#: Tab bar colors
-
-active_tab_foreground #f8fafc
-active_tab_background #1e1e1f
-inactive_tab_foreground #a2abb3
-inactive_tab_background #2b2b2c
-tab_bar_background #2b2b2c
-tab_bar_margin_color none
-
-
-#: Colors for marks (marked text in the terminal)
-
-mark1_foreground #1e1e1f
-mark1_background #936df3
-mark2_foreground #1e1e1f
-mark2_background #7e8891
-mark3_foreground #1e1e1f
-mark3_background #479eeb
-
-
-#: The basic 16 colors
-
-#: black
-color0 #1e1e1f
-color8 #5e5c60
-
-#: red
-color1 #a17efc
-color9 #8ac8ff
-
-#: green
-color2 #75bfff
-color10 #2b2b2c
-
-#: yellow
-color3 #b3dbff
-color11 #515053
-
-#: blue
-color4 #b294ff
-color12 #6a686e
-
-#: magenta
-color5 #75bfff
-color13 #e5dbff
-
-#: cyan
-color6 #c5adff
-color14 #69b5f7
-
-#: white
-color7 #97959d
-color15 #f4f0ff
+# white
+color7  #D7DAE0
+color15 #E6E6E6
