--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,11 +1,3 @@
-# font_family "JetBrainsMono Nerd Font"
-# bold_font auto
-# italic_font auto
-# bold_italic_font auto
-font_size 14.0
-
-# modify_font cell_height +0px
-# modify_font baseline 2
 
 
 # 背景模糊
@@ -25,17 +17,18 @@ macos_show_window_title_in menubar
 # hide_window_decorations titlebar-only
 
 
-window_padding_width 0 10
+window_padding_width 0 8
 
 remember_window_size  no
 initial_window_width  85c
 initial_window_height 35c
  # suffix of "c" on the value means "character cell" instead of pixels
+# draw_minimal_borders yes
 
 # 光标动画 
 cursor_trail 1
-cursor_trail_start_threshold -1 
 # 始终启用光标轨迹
+cursor_trail_start_threshold -1 
 cursor_trail_decay 0.1 0.15 
 
 cursor_blink_interval 0.5
@@ -44,7 +37,15 @@ scrollback_lines 10000
 
 macos_option_as_alt yes
 
+# Vi mode
+scrollback_pager nvim +"source ~/.config/kitty/vi-mode.lua"
+map shift+ctrl+space show_scrollback
 
+
+font_size 14.0
+
+# modify_font cell_height +0px
+# modify_font baseline 2
 
 # BEGIN_KITTY_FONTS
 font_family      family="JetBrains Mono"
@@ -55,6 +56,6 @@ bold_italic_font auto
 
 
 # BEGIN_KITTY_THEME
-# Base2Tone Mall Dark
+# OneDark-Pro
 include current-theme.conf
 # END_KITTY_THEME
