--- a/iterm2/settings/com.googlecode.iterm2.plist
+++ b/iterm2/settings/com.googlecode.iterm2.plist
@@ -95213,7 +95213,7 @@
 	<key>VisualIndicatorForEsc</key>
 	<false/>
 	<key>WindowNumber</key>
-	<false/>
+	<true/>
 	<key>findMode_iTerm</key>
 	<integer>0</integer>
 	<key>kCPFavoritesUserDefaultsKey</key>
