完善kitty vi mode功能，将配置文件移到nvim目录下

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -16,6 +16,9 @@ macos_titlebar_color background
 macos_show_window_title_in menubar
 # hide_window_decorations titlebar-only
 
+# 
+allow_remote_control yes
+# enabled_layouts=tall
 
 window_padding_width 0 8
 
@@ -38,7 +41,9 @@ scrollback_lines 10000
 macos_option_as_alt yes
 
 # Vi mode
-scrollback_pager nvim +"source ~/.config/kitty/vi-mode.lua"
+# scrollback_pager nvim +"source ~/.config/kitty/vi-mode.lua"
+# scrollback_pager nvim -u NONE -R -M -c 'lua require("kitty+page")(INPUT_LINE_NUMBER, CURSOR_LINE, CURSOR_COLUMN)' - 
+scrollback_pager nvim -u NONE -R -M -c "lua require('kitty+page')(INPUT_LINE_NUMBER, CURSOR_LINE, CURSOR_COLUMN, KITTY_WINDOW_ID)" - 
 map shift+ctrl+space show_scrollback
 
 
@@ -56,6 +61,6 @@ bold_italic_font auto
 
 
 # BEGIN_KITTY_THEME
-# OneDark-Pro
+# bl1nk
 include current-theme.conf
 # END_KITTY_THEME
