--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -1,62 +1,64 @@
-# vim:ft=kitty
+## name: bl1nk
+## author: dhay3
+## license: CC0 1.0
+## upstream: https://github.com/dhay3/kitty-bl1nk/blob/main/bl1nk.conf
 
-## name:     OneDark-Pro
-## author:   VictorPL (https://github.com/VictorPLopes)
-## license:  MIT
-## upstream: https://github.com/VictorPLopes/OneDark-Pro-Kitty-Terminal/blob/main/kitty-themes/OneDark-Pro.conf
-## blurb:    Kitty theme inspired by Binaryify's One Dark Pro theme for Visual Studio Code.
+#: The basic colors
+background                              #111111
+foreground                              #A0A0A0
+selection_foreground                    none
+selection_background                    none
 
-# Colors
 
-# The basic colors
-foreground              #ABB2BF
-background              #282C34
-selection_foreground    #282C34
-selection_background    #ABB2BF
+#: cursor colors
+cursor                                  none
 
-# Cursor colors
-cursor                  #ABB2BF
-cursor_text_color       #282C34
 
-# URL underline color when hovering with mouse
-url_color               #ABB2BF
+#: URL underline color when hovering with mouse
+url_color                               #0087bd
 
-# Tab bar colors
-active_tab_foreground   #3F4451
-active_tab_background   #D7DAE0
-inactive_tab_foreground #ABB2BF
-inactive_tab_background #282C34
 
-# The 16 terminal colors
+#: kitty window border colors and terminal bell colors
+visual_bell_color                       none
 
-# black
-color0 #3F4451
-color8 #4F5666
 
-# red
-color1 #E06C75
-color9 #BE5046
+#: Tab bar colors
+active_tab_foreground                   #FFFFFF
+active_tab_background                   #9C7BD7
+inactive_tab_foreground                 #FFFFFF
+inactive_tab_background                 #545B7D
 
-# green
-color2  #98C379
-color10 #A5E075
 
-# yellow
-color3  #D19A66
-color11 #E5C07B
+#: The basic 16 colors
 
-# blue
-color4  #61AFEF
-color12 #4DC4FF
+#: black
+color0                                  #1A1C1D
+color8                                  #505354
 
-# purple
-color5  #C678DD
-color13 #DE73FF
+#: red
+color1                                  #FF5894
+color9                                  #F92571
 
-# cyan
-color6  #56B6C2
-color14 #4CD1E0
+#: green
+color2                                  #B5E354
+color10                                 #81B313
 
-# white
-color7  #D7DAE0
-color15 #E6E6E6
+#: yellow
+color3                                  #F5921D
+color11                                 #FEED6B
+
+#: blue
+color4                                  #4E81AA
+color12                                 #0B72C1
+
+#: magenta
+color5                                  #8B54FE
+color13                                 #9D6EFE
+
+#: cyan
+color6                                  #465456
+color14                                 #889BA1
+
+#: white
+color7                                  #CBCBC5
+color15                                 #F8F8F2
