--- a/neovide/config.toml
+++ b/neovide/config.toml
@@ -2,9 +2,8 @@ fork = false
 frame = "transparent"
 idle = true
 maximized = false
-# neovim-bin = "/usr/bin/nvim" # in reality found dynamically on $PATH if unset
 no-multigrid = false
-srgb = false
+srgb = true
 tabs = true
 theme = "auto"
 mouse-cursor-icon = "arrow"
