--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,3 @@
-
-
 # 背景模糊
 # 在Macos下开启会导致窗口阴影不渲染，不太和谐，所以不用
 # background_opacity 0.90
@@ -16,11 +14,15 @@ macos_titlebar_color background
 macos_show_window_title_in menubar
 # hide_window_decorations titlebar-only
 
+tab_bar_background none
+
 # 
 allow_remote_control yes
 # enabled_layouts=tall
+enabled_layouts horizontal
 
 window_padding_width 0 8
+# window_padding_width 0 0
 
 remember_window_size  no
 initial_window_width  85c
@@ -46,13 +48,13 @@ macos_option_as_alt yes
 scrollback_pager nvim -u NONE -R -M -c "lua require('kitty+page')(INPUT_LINE_NUMBER, CURSOR_LINE, CURSOR_COLUMN, KITTY_WINDOW_ID)" - 
 map shift+ctrl+space show_scrollback
 
-
 font_size 14.0
 
 # modify_font cell_height +0px
 # modify_font baseline 2
 
 # BEGIN_KITTY_FONTS
+# font_family      family="JetBrainsMono Nerd Font"
 font_family      family="JetBrains Mono"
 bold_font        auto
 italic_font      auto
