完善macos setup相关的脚步

--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -1,64 +1,95 @@
-## name: bl1nk
-## author: dhay3
-## license: CC0 1.0
-## upstream: https://github.com/dhay3/kitty-bl1nk/blob/main/bl1nk.conf
+# vim:ft=kitty
+
+## name: Base2Tone Evening Dark
+## author: Bram de Haan (https://github.com/atelierbram)
+## license: MIT
+## upstream: https://github.com/atelierbram/Base2Tone-kitty/blob/main/themes/base2tone-evening-dark.conf
+## blurb: Default duotone theme | purple - orange
+
 
 #: The basic colors
-background                              #111111
-foreground                              #A0A0A0
-selection_foreground                    none
-selection_background                    none
+
+foreground #a4a1b5
+background #2a2734
+selection_foreground #a4a1b5
+selection_background #363342
 
 
-#: cursor colors
-cursor                                  none
+#: Cursor colors
+
+cursor #b37537
+cursor_text_color #2a2734
 
 
 #: URL underline color when hovering with mouse
-url_color                               #0087bd
+
+url_color #d9d2fe
 
 
 #: kitty window border colors and terminal bell colors
-visual_bell_color                       none
+
+active_border_color #545167
+inactive_border_color #2a2734
+bell_border_color #6a51e6
+visual_bell_color none
+
+
+#: OS Window titlebar colors
+
+# wayland_titlebar_color #363342
+# macos_titlebar_color #363342
 
 
 #: Tab bar colors
-active_tab_foreground                   #FFFFFF
-active_tab_background                   #9C7BD7
-inactive_tab_foreground                 #FFFFFF
-inactive_tab_background                 #545B7D
+
+active_tab_foreground #fbfaf9
+active_tab_background #2a2734
+inactive_tab_foreground #b2aba4
+inactive_tab_background #363342
+tab_bar_background #363342
+tab_bar_margin_color none
+
+
+#: Colors for marks (marked text in the terminal)
+
+mark1_foreground #2a2734
+mark1_background #7a63ee
+mark2_foreground #2a2734
+mark2_background #90877f
+mark3_foreground #2a2734
+mark3_background #cb823a
 
 
 #: The basic 16 colors
 
 #: black
-color0                                  #1A1C1D
-color8                                  #505354
+color0 #2a2734
+color8 #6c6783
 
 #: red
-color1                                  #FF5894
-color9                                  #F92571
+color1 #8a75f5
+color9 #ffb870
 
 #: green
-color2                                  #B5E354
-color10                                 #81B313
+color2 #ffad5c
+color10 #363342
 
 #: yellow
-color3                                  #F5921D
-color11                                 #FEED6B
+color3 #ffcc99
+color11 #545167
 
 #: blue
-color4                                  #4E81AA
-color12                                 #0B72C1
+color4 #9a86fd
+color12 #787391
 
 #: magenta
-color5                                  #8B54FE
-color13                                 #9D6EFE
+color5 #ffad5c
+color13 #d9d2fe
 
 #: cyan
-color6                                  #465456
-color14                                 #889BA1
+color6 #afa0fe
+color14 #ffa142
 
 #: white
-color7                                  #CBCBC5
-color15                                 #F8F8F2
+color7 #a4a1b5
+color15 #eeebff
