--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -46,7 +46,7 @@ macos_option_as_alt yes
 scrollback_pager nvim -u NONE -R -M -c "lua require('kitty+page')(INPUT_LINE_NUMBER, CURSOR_LINE, CURSOR_COLUMN, KITTY_WINDOW_ID)" - 
 map shift+ctrl+space show_scrollback
 
-font_size 14.5
+font_size 14
 
 # narrow_symbols  2 
 
@@ -63,6 +63,6 @@ bold_italic_font auto
 
 
 # BEGIN_KITTY_THEME
-# Base2Tone Evening Dark
+# Ayu
 include current-theme.conf
 # END_KITTY_THEME
