调整iterm2和kitty的外观配置

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -19,8 +19,10 @@ allow_remote_control yes
 # enabled_layouts=tall
 enabled_layouts horizontal
 
-window_padding_width 0 8
-# window_padding_width 8 8
+# window_padding_width 0 8
+window_padding_width 0 8 8 8 
+# top, right, bottom and left.
+# window_padding_width 5 8
 
 remember_window_size  no
 initial_window_width  85c
